6.1.6 TBA
- close progress dialog on small files

6.1.5 09-December 2018
- fix build if CONFIG+=no_dbus enabled
- fixed broken multiple file copy/move instances

6.1.4 26-November 2018
- fix potential config corruption. Thanks to @slackuser0xae34 for the patch
- fix segfault on thumbnail update (view may have changed since loading thumbnails)
- don't cut file(s) if moving to same directory in bookmarks
- verify reply from udisks (avoid crash)
- populate view if not watched
- fix refresh view
- improved performance

6.1.3 07-October 2018
- update grid on paste/remove
- settings: don't show "launcher" in application dialog
- added manual refresh of path

6.1.2 11-September 2018
- fixed broken file type check on custom actions
- added new (default) custom actions
- fixed issue with /etc/mtab not being read properly on some systems
- settings: added restore custom actions to default option
- FreeBSD: fixed issue with UDisks
- associate more mime types with icons

6.1.1 25-August 2018
- fixed ask dialog in bookmarks when drag-and-drop
- update listview grid earlier
- tray: fix open mountpoint in qtfm (with spaces)

6.1.0 04-August 2018
- added system tray daemon (qtfm-tray), auto mount/play storage/optical
- drag-and-drop: add settings for modifiers
- inotify fixes
- fixed refresh of thumbnails
- added singleclick options in settings
- several ui fixes/enhancements
- added dbus session support
- various fixes/changes in settings
- various bug fixes
- added new build options
- added (icon) zoom support where missing
- proper support for multiple files in external applications
- advanced settings
- FreeBSD support
- bookmarks drop fixes
- mime fixes

6.0.3 11-June 2018
- fixed mount issue with optical in udisks

6.0.2 08-June 2018
- fixed another bookmark related bug

6.0.1 07-June 2018
- fixed broken bookmarks save
- fixed segfault if udisks not running

6.0.0 04-June 2018
- support for removable devices (udisks)
- basic trash support
- several bug/ui/build/mime fixes